Refactor: Updated the movies controllers to allow reusability and avoid duplication of some code lines
